# boatapp

./: .gitignore  BtnsPage.qml  Button_ZSJ1.qml  CMakeLists.txt  CMakeLists.txt.user.ece5852  CircleProgress.qml  DrongItem.qml  Instrument.qml  LabeledSlider.qml  Main.qml  MenuItem_ZSJ1.qml  MuSwitchBtn.qml  Page1.qml  Page3.qml  Page_MAP.qml  Pages.qml  RadioBtnCombobox.qml  Sidebar.qml  SidebarItem.qml  TabItem_ZSJ1.qml  Topbar.qml  canshusetPage.qml  cmd_send.cpp  cmd_send.h  crc16.cpp  crc16.h  define.h  main.cpp  qml.qrc  serialportmanager.cpp  serialportmanager.h  udpmanager.cpp  udpmanager.h  waypointsetPage.qml
.cache/clangd/index/: crc16.cpp.221AF50FCE4B4660.idx  define.h.9083289B77D30E8C.idx  main.cpp.1EBDA38C556BFB8E.idx  serialportmanager.cpp.6FE9A45E9EC296E9.idx  serialportmanager.h.C4ADC976A2CEF43E.idx  udpmanager.cpp.6696482A9DAC0E27.idx
res/: demo02.html
